minor changes, fixing text spacing with bootstrap classes and height limits on home/about for mobile screens

--- a/client/styles/homePage.css
+++ b/client/styles/homePage.css
@@ -56,7 +56,7 @@ main
     align-items: center;
     gap: 30px;
     max-width: 100%;
-    height: 70vh;
+    height: 60vh;
 }
 
 /* Updated for new design */
